[gd_scene load_steps=3 format=3 uid="uid://m1q18cpkrt8n"]

[ext_resource type="Script" uid="uid://bgtb58rwxk6b7" path="res://editor/controls/dockers/workspace_docker/simulations_docker/simulations_docker_controls/time_span_picker.gd" id="1_lbilf"]
[ext_resource type="PackedScene" uid="uid://b15453vqjum8" path="res://editor/controls/general/spin_box_slider.tscn" id="2_2fgfn"]

[node name="TimeSpanPicker" type="HBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_lbilf")
time_span_femtoseconds = 0.25

[node name="SpinBoxSlider" parent="." instance=ExtResource("2_2fgfn")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
min_value = 0.05
max_value = 500.0
step = 0.05
value = 0.25
allow_greater = true
suffix = "fs"
select_all_on_focus = true

[node name="OptionButtonTimeSpanUnit" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "Femtoseconds (fs)"
popup/item_0/id = 0
popup/item_1/text = "Picoseconds (ps)"
popup/item_1/id = 1
popup/item_2/text = "Nanoseconds (ns)"
popup/item_2/id = 2
